<resources>
    <string name="app_name">Trocatine</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Carrinho</string>
    <string name="menu_newProduct">Anúnciar</string>
    <string name="menu_community">Comunidade</string>
    <string name="menu_userProfile">Perfil</string>
    <string-array name="spinner_color">
        <item>Preto</item>
        <item>Branco</item>
        <item>Vermelho</item>
        <item>Azul</item>
        <item>Roxo</item>
    </string-array>
    <string-array name="spinner_gender">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Superhomem</item>
    </string-array>
    <string-array name="spinner_quality">
        <item>Usado</item>
        <item>Pouco usado</item>
        <item>Pedro Moises</item>
        <item>Novo</item>
    </string-array>
    <string-array name="spinner_size">
        <item>RN</item>
        <item>P</item>
        <item>12</item>
        <item>G</item>
        <item>M</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
    </string-array>
    <string-array name="spinner_category">
        <item>Brinquedo</item>
        <item>Roupas</item>
        <item>Sapato</item>
        <item>Eletrônico</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>